src/test/deca/context/valid/provided/tout_print.deca

{int x = 2;
x = 5;
print("test"); 
printx("test") ;
println("test") ;
printlnx(x); 
}

/*  Commentaire  */
