src/test/deca/context/invalid/provided/not_number.deca
//Resultats :
//Erreur contextuelle
//Ligne 4 : cannot apply the NotOperator to this type
{int x = !(2);}
